--- a/readme
+++ b/readme
@@ -4,3 +4,8 @@ which means more efficiency and accurate ..
 ## USAGE 
 this tool is made available for terminal and linux frameworks 
 DEBIAN OS , TERMUX(kernel version), KALI LINUX and more....
+Tool is expected to do your hacking wiht ease .. 
+## SUPPORT 
+Wanna suggest more passwords why not? fork and edit
+Add new passwords <10 length 
+follow us on facebook CYBEHACKS >www.facebook.com/cyberhacks6
